# physical_ccd_glitch

./: Cargo.toml  README.md  Trunk.toml  index.html
.github/workflows/: pages.yml  rust.yml
src/: app.rs  circuit_display.rs  image_io.rs  lib.rs  main.rs  pipeline.rs  waveform_display.rs
src/ccd/: adc.rs  amplifier.rs  blooming.rs  mod.rs  sensor.rs  transfer.rs
src/color/: bayer.rs  demosaic.rs  mod.rs  spectral.rs
src/glitch/: bit_manip.rs  channel.rs  mod.rs  pixel_shift.rs  scan_line.rs
src/spice/: adc.rs  amplifier.rs  cache.rs  cds.rs  clock_driver.rs  glitch.rs  mod.rs  models.rs  pixel.rs  shift_register.rs  transfer_function.rs
