[package]
name = "physical_ccd_glitch"
version = "0.1.0"
edition = "2024"

[features]
default = ["spice"]
spice = ["dep:spice21"]

[dependencies]
eframe = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = "0.25"
rand = "0.9"
rand_distr = "0.5"
log = "0.4"
web-time = "1"
spice21 = { git = "https://github.com/dan-fritchman/Spice21.git", optional = true }

# native only
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
rayon = "1.10"
env_logger = "0.11"

# web only
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Document",
    "Window",
    "Element",
    "Blob",
    "BlobPropertyBag",
    "Url",
    "FileList",
    "File",
    "FileReader",
    "EventTarget",
    "HtmlElement",
] }
js-sys = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }

[[bin]]
name = "spice_test"
path = "src/bin/spice_test.rs"
required-features = ["spice"]

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2
